--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -74,7 +74,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Das Gehäuse – Basis und Schutz
+        Das Gehäuse - Basis und Schutz
       </h3>
       <p>
         Das Gehäuse bildet die äußere Hülle des Computers. Es dient als stabile
@@ -85,7 +85,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Das Mainboard – Verbindung aller Komponenten
+        Das Mainboard - Verbindung aller Komponenten
       </h3>
       <p>
         Das Mainboard ist die zentrale Platine des Computers und wird fest im
@@ -96,7 +96,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Der Prozessor (CPU) – Steuerung und Berechnung
+        Der Prozessor (CPU) - Steuerung und Berechnung
       </h3>
       <p>
         Der Prozessor wird in einen speziellen Sockel auf dem Mainboard
@@ -107,7 +107,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Der CPU-Kühler – Temperaturkontrolle
+        Der CPU-Kühler - Temperaturkontrolle
       </h3>
       <p>
         Direkt auf dem Prozessor wird ein Kühler montiert. Dieser besteht aus
@@ -117,7 +117,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Der Arbeitsspeicher (RAM) – Kurzzeitspeicher
+        Der Arbeitsspeicher (RAM) - Kurzzeitspeicher
       </h3>
       <p>
         Der Arbeitsspeicher wird in spezielle Steckplätze auf dem Mainboard
@@ -128,7 +128,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Die Grafikkarte – Bildverarbeitung
+        Die Grafikkarte - Bildverarbeitung
       </h3>
       <p>
         Die Grafikkarte wird in einen PCIe-Steckplatz auf dem Mainboard
@@ -139,7 +139,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Massenspeicher – SSD und HDD
+        Massenspeicher - SSD und HDD
       </h3>
       <p>
         Der Massenspeicher wird im Gehäuse montiert und über Datenkabel mit dem
@@ -149,7 +149,7 @@
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Das Netzteil – Energieversorgung
+        Das Netzteil - Energieversorgung
       </h3>
       <p>
         Das Netzteil ist meist im unteren oder oberen Bereich des Gehäuses
