--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Aufbau – Computer</title>
+    <title>Aufbau & Funktionsweise – Computer</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -13,7 +13,6 @@
   </head>
 
   <body class="bg-light">
-    <!-- Navigation -->
     <nav class="py-3 border-bottom bg-dark">
       <div
         class="container d-flex flex-wrap align-items-center justify-content-between"
@@ -53,175 +52,163 @@
       </div>
     </nav>
 
-    <!-- Header -->
     <div class="bg-dark text-white py-5">
       <div class="container">
-        <h1 class="display-4 fw-bold">
-          Aufbau und Funktionsweise eines Computers
-        </h1>
-        <p class="lead">Wie alle Komponenten zusammenarbeiten</p>
+        <h1 class="display-4 fw-bold">Zusammenbau & System-Integration</h1>
+        <p class="lead">
+          Vom Einzelteil zum funktionierenden System: Montage und Datenfluss
+        </p>
       </div>
     </div>
 
-    <!-- Inhalt -->
     <div class="container my-5 section-box">
       <p>
-        Der Aufbau eines Computers beschreibt sowohl die physische Anordnung der
-        Hardware-Komponenten als auch deren Zusammenarbeit. Jede einzelne
-        Komponente hat eine klar definierte Aufgabe und ist mit anderen Teilen
-        verbunden. Nur durch dieses Zusammenspiel kann ein Computer Programme
-        ausführen, Daten verarbeiten und Informationen ausgeben.
+        Ein Computer ist mehr als die Summe seiner Teile. Um ein
+        funktionierendes System zu erhalten, müssen die Komponenten in einer
+        logischen Reihenfolge montiert und verkabelt werden. Anschließend sorgt
+        das Zusammenspiel von Hardware und Software für die Funktion. Hier
+        erklären wir den Weg vom leeren Gehäuse bis zum fertigen Rechenprozess.
+      </p>
+
+      <h2 class="fw-bold mt-5 mb-4 text-primary">Teil 1: Der Zusammenbau</h2>
+
+      <h3 class="fw-bold mt-4 mb-3 border-bottom pb-2">
+        1. Die Vorbereitung des Mainboards
+      </h3>
+      <p>
+        Der Zusammenbau beginnt meist außerhalb des Gehäuses. Das Mainboard
+        dient als Basis. Zuerst wird der
+        <strong>Prozessor (CPU)</strong> vorsichtig in den Sockel eingesetzt und
+        verriegelt. Anschließend wird der
+        <strong>Arbeitsspeicher (RAM)</strong> in die dafür vorgesehenen Bänke
+        gedrückt, bis er hörbar einrastet.
+      </p>
+      <p>
+        Ist eine <strong>M.2 SSD</strong> vorhanden, wird diese nun direkt auf
+        dem Mainboard verschraubt. Zum Abschluss dieser Phase wird der
+        <strong>CPU-Kühler</strong> montiert. Wärmeleitpaste zwischen CPU und
+        Kühler sorgt dabei für eine lückenlose Wärmeübertragung.
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Das Gehäuse - Basis und Schutz
+        2. Vorbereitung des Gehäuses
       </h3>
       <p>
-        Das Gehäuse bildet die äußere Hülle des Computers. Es dient als stabile
-        Grundlage, in der alle Komponenten befestigt werden. Im Inneren befinden
-        sich Montageplätze für das Mainboard, Laufwerke, das Netzteil sowie
-        Halterungen für Lüfter. Zusätzlich schützt das Gehäuse die empfindliche
-        Hardware vor Staub, Berührung und mechanischen Schäden.
+        Das Gehäuse wird geöffnet. Zuerst wird das <strong>Netzteil</strong> an
+        seiner Position (meist unten hinten) verschraubt und die Kabelstränge
+        werden zur Seite gelegt. Wichtig ist nun das Einsetzen der
+        Abstandshalter für das Mainboard, damit die Platine keinen Kontakt zum
+        Metall des Gehäuses hat (Kurzschlussgefahr). Auch die I/O-Blende für die
+        hinteren Anschlüsse wird jetzt eingesetzt.
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Das Mainboard - Verbindung aller Komponenten
+        3. Einbau des Mainboards ("Die Hochzeit")
       </h3>
       <p>
-        Das Mainboard ist die zentrale Platine des Computers und wird fest im
-        Gehäuse verschraubt. Auf ihm befinden sich Steckplätze und Anschlüsse
-        für fast alle weiteren Komponenten. Es stellt Datenleitungen
-        (Bus-Systeme) und Stromverbindungen bereit und sorgt dafür, dass alle
-        Bauteile miteinander kommunizieren können.
+        Das vorbereitete Mainboard (mit CPU, RAM und Kühler) wird vorsichtig in
+        das Gehäuse gehoben und auf die Abstandshalter gesetzt. Anschließend
+        wird es mit mehreren Schrauben fixiert. Nun sitzt das Herzstück des PCs
+        fest an seinem Platz.
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Der Prozessor (CPU) - Steuerung und Berechnung
+        4. Erweiterungskarten und Laufwerke
       </h3>
       <p>
-        Der Prozessor wird in einen speziellen Sockel auf dem Mainboard
-        eingesetzt. Er verarbeitet Befehle des Betriebssystems und von
-        Programmen. Alle Berechnungen, Entscheidungen und Steuerbefehle laufen
-        über die CPU. Sie kommuniziert ständig mit dem Arbeitsspeicher und
-        anderen Komponenten über das Mainboard.
+        Nun folgt die <strong>Grafikkarte</strong>. Sie wird in den oberen
+        PCIe-Slot gesteckt und am Gehäuse verschraubt. Falls herkömmliche
+        2,5-Zoll SSDs oder 3,5-Zoll HDDs verbaut werden, werden diese in die
+        Laufwerksschächte geschoben und mit SATA-Datenkabeln am Mainboard
+        angeschlossen.
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Der CPU-Kühler - Temperaturkontrolle
+        5. Die Verkabelung (Strom und Steuerung)
       </h3>
       <p>
-        Direkt auf dem Prozessor wird ein Kühler montiert. Dieser besteht aus
-        einem Kühlkörper und meist einem Lüfter. Da die CPU beim Arbeiten viel
-        Wärme erzeugt, leitet der Kühler diese Wärme ab, um Überhitzung und
-        Leistungsverlust zu verhindern.
+        Der vielleicht wichtigste Schritt ist die Verkabelung. Das Netzteil
+        versorgt nun alle Komponenten:
+      </p>
+      <ul>
+        <li><strong>24-Pin Stecker:</strong> Versorgt das Mainboard.</li>
+        <li><strong>EPS-Stecker (4/8-Pin):</strong> Versorgt die CPU.</li>
+        <li><strong>PCIe-Stecker:</strong> Versorgt die Grafikkarte.</li>
+        <li><strong>SATA-Strom:</strong> Versorgt Festplatten und SSDs.</li>
+      </ul>
+      <p>
+        Zuletzt werden die feinen Kabel des Gehäuses (Power-Knopf, Reset, LEDs,
+        USB-Frontanschlüsse) mit dem Mainboard verbunden.
+      </p>
+
+      <h2 class="fw-bold mt-5 mb-4 text-primary">
+        Teil 2: Das Zusammenspiel (Funktionsweise)
+      </h2>
+
+      <p>
+        Nach dem Zusammenbau greifen die Komponenten wie Zahnräder ineinander.
+        Dieser Prozess lässt sich am besten anhand des Datenflusses erklären
+        (EVA-Prinzip: Eingabe – Verarbeitung – Ausgabe).
+      </p>
+
+      <h3 class="fw-bold mt-4 mb-3 border-bottom pb-2">
+        Der Startvorgang (POST & Boot)
+      </h3>
+      <p>
+        Beim Drücken des Power-Knopfes sendet das Netzteil das "Power
+        Good"-Signal. Das Mainboard erwacht und das
+        <strong>BIOS/UEFI</strong> startet einen Selbsttest (POST). Es prüft:
+        Ist RAM da? Funktioniert die CPU? Wird die Grafikkarte erkannt? Wenn
+        alles in Ordnung ist, gibt das BIOS den Befehl an die SSD, das
+        Betriebssystem (z. B. Windows) in den schnellen Arbeitsspeicher zu
+        laden.
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Der Arbeitsspeicher (RAM) - Kurzzeitspeicher
+        Verarbeitung von Befehlen
       </h3>
       <p>
-        Der Arbeitsspeicher wird in spezielle Steckplätze auf dem Mainboard
-        eingesetzt. Er speichert temporär Daten, die aktuell von der CPU
-        benötigt werden. Je schneller der RAM, desto schneller kann der
-        Prozessor auf diese Daten zugreifen. Ohne RAM wäre ein Arbeiten in
-        Echtzeit nicht möglich.
+        Wenn der Nutzer nun ein Programm startet (<strong>Eingabe</strong> per
+        Maus), passiert Folgendes im Millisekunden-Takt:
+      </p>
+      <ol>
+        <li>
+          Die <strong>SSD</strong> lädt die Programmdaten in den
+          <strong>RAM</strong>, da die SSD für Echtzeitberechnungen zu langsam
+          wäre.
+        </li>
+        <li>
+          Die <strong>CPU</strong> holt sich die Befehle aus dem RAM. Sie ist
+          das Gehirn, das rechnet und entscheidet ("Wenn Klick hier, dann tue
+          das").
+        </li>
+        <li>
+          Komplexe Berechnungen für die Darstellung (z. B. 3D-Welten oder
+          Fenster) lagert die CPU an die <strong>Grafikkarte (GPU)</strong> aus.
+        </li>
+      </ol>
+
+      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
+        Ausgabe und Speicherung
+      </h3>
+      <p>
+        Die Grafikkarte wandelt die berechneten Daten in ein Bildsignal um und
+        sendet es an den Monitor (<strong>Ausgabe</strong>). Gleichzeitig werden
+        Ergebnisse, die dauerhaft behalten werden sollen (z. B. ein
+        gespeichertes Dokument), vom flüchtigen RAM zurück auf die
+        <strong>SSD/HDD</strong>
+        geschrieben.
       </p>
 
       <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Die Grafikkarte - Bildverarbeitung
+        Das thermische Gleichgewicht
       </h3>
       <p>
-        Die Grafikkarte wird in einen PCIe-Steckplatz auf dem Mainboard
-        eingesetzt. Sie übernimmt die Berechnung von Grafiken, Bildern und
-        Videos. Die berechneten Bildinformationen werden anschließend an den
-        Monitor ausgegeben. Moderne Grafikkarten besitzen einen eigenen
-        Prozessor und eigenen Speicher.
-      </p>
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Massenspeicher - SSD und HDD
-      </h3>
-      <p>
-        Der Massenspeicher wird im Gehäuse montiert und über Datenkabel mit dem
-        Mainboard verbunden. Auf ihm befinden sich das Betriebssystem, Programme
-        und persönliche Dateien. Während des Betriebs lädt die CPU benötigte
-        Daten vom Massenspeicher in den Arbeitsspeicher.
-      </p>
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Das Netzteil - Energieversorgung
-      </h3>
-      <p>
-        Das Netzteil ist meist im unteren oder oberen Bereich des Gehäuses
-        montiert. Es wandelt den Strom aus der Steckdose in nutzbare Spannungen
-        um und versorgt Mainboard, CPU, Grafikkarte, Laufwerke und Lüfter über
-        Kabel mit Energie.
-      </p>
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Lüfter und Luftstrom</h3>
-      <p>
-        Mehrere Gehäuselüfter sorgen für einen kontrollierten Luftstrom. Kühle
-        Luft wird angesaugt, warme Luft abgeführt. Dadurch bleiben alle
-        Komponenten innerhalb sicherer Temperaturbereiche, was Stabilität und
-        Lebensdauer erhöht.
-      </p>
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Zusammenarbeit aller Komponenten
-      </h3>
-      <p>
-        Beim Start des Computers liefert das Netzteil Strom an das Mainboard.
-        Dieses aktiviert die CPU, welche das Betriebssystem vom Massenspeicher
-        in den Arbeitsspeicher lädt. Programme werden verarbeitet, Daten im RAM
-        zwischengespeichert und Ergebnisse über die Grafikkarte ausgegeben.
-        Jeder Schritt ist Teil eines abgestimmten Systems.
-      </p>
-
-      <!-- NEUE ABSCHNITTE -->
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Ein- und Ausgabegeräte (Peripherie)
-      </h3>
-      <p>
-        Neben den internen Komponenten gehören auch Ein- und Ausgabegeräte zu
-        einem vollständigen Computersystem. Eingabegeräte wie Tastatur, Maus
-        oder Mikrofon ermöglichen die Eingabe von Befehlen und Daten.
-        Ausgabegeräte wie Monitor, Lautsprecher oder Drucker geben die vom
-        Computer verarbeiteten Informationen aus. Diese Geräte werden extern
-        über verschiedene Anschlüsse mit dem Computer verbunden.
-      </p>
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        Schnittstellen und Anschlüsse
-      </h3>
-      <p>
-        Damit Komponenten und Peripheriegeräte miteinander kommunizieren können,
-        besitzt ein Computer zahlreiche Schnittstellen. Zu den wichtigsten
-        externen Anschlüssen gehören USB für Eingabegeräte, HDMI oder
-        DisplayPort für Bildausgabe sowie Netzwerkanschlüsse für
-        Internetverbindungen. Intern werden Bauteile über Schnittstellen wie
-        SATA, PCIe oder M.2 verbunden, die einen schnellen Datenaustausch
-        ermöglichen.
-      </p>
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">
-        BIOS/UEFI – Start des Computers
-      </h3>
-      <p>
-        Beim Einschalten des Computers wird zunächst das BIOS beziehungsweise
-        das moderne UEFI gestartet. Diese Firmware ist auf dem Mainboard
-        gespeichert und überprüft die angeschlossene Hardware. Erst wenn alle
-        wichtigen Komponenten korrekt erkannt wurden, wird das Betriebssystem
-        vom Massenspeicher geladen.
-      </p>
-
-      <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Das Betriebssystem</h3>
-      <p>
-        Das Betriebssystem steuert den gesamten Computerbetrieb. Es verwaltet
-        die Hardware-Ressourcen, ermöglicht die Ausführung von Programmen und
-        stellt die Benutzeroberfläche bereit. Bekannte Betriebssysteme sind
-        Windows, Linux und macOS. Ohne ein Betriebssystem wäre der Computer
-        nicht nutzbar.
+        Während all diese Daten fließen, produzieren CPU und GPU massive Hitze.
+        Hier schließt sich der Kreis zum Gehäuse: Die Frontlüfter saugen kühle
+        Luft an, der CPU-Kühler und GPU-Lüfter geben die Hitze an diese Luft ab,
+        und die hinteren Lüfter befördern die warme Luft aus dem Gehäuse. Das
+        System bleibt stabil.
       </p>
     </div>
 
