content of cpu and improved homepage

--- a/Hardware und PC-Komponenten/cpu.html
+++ b/Hardware und PC-Komponenten/cpu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gehäuse – PC Case</title>
+    <title>CPU - Prozessor</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +11,6 @@
 
 <body class="bg-light">
 
-<!-- Navigation -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
         <ul class="nav ms-auto">
@@ -42,74 +41,74 @@
     </div>
 </nav>
 
-<!-- Header -->
 <div class="bg-dark text-white py-5">
     <div class="container">
-        <h1 class="display-4 fw-bold">Gehäuse – Das PC Case</h1>
-        <p class="lead">Schutz, Struktur und Airflow für dein System</p>
+        <h1 class="display-4 fw-bold">CPU - Der Prozessor</h1>
+        <p class="lead">Das Gehirn des Computers</p>
     </div>
 </div>
 
-<!-- Inhalt -->
 <div class="container my-5 section-box">
 <div class="row align-items-start">
 
-<!-- Text -->
 <div class="col-md-6">
 
     <h2 class="fw-bold mb-3 border-bottom pb-2">
-        <i class="bi bi-box"></i> Was ist ein PC-Gehäuse?
+        <i class="bi bi-cpu"></i> Was ist eine CPU?
     </h2>
 
     <p>
-        Das PC-Gehäuse ist das äußere Gehäuse eines Computers und beherbergt alle wichtigen Komponenten wie
-        Mainboard, CPU, Grafikkarte, Netzteil und Speichergeräte. Es schützt die Hardware vor Staub,
-        Beschädigungen und sorgt gleichzeitig für eine gute Luftzirkulation.
+        Die CPU, also die Central Processing Unit, ist die zentrale Recheneinheit eines Computers.
+        Sie führt Befehle aus, verarbeitet Daten und steuert alle anderen Komponenten. Ohne CPU kann
+        kein Computer funktionieren, da sie alle Anweisungen interpretiert und ausführt, die Programme
+        und das Betriebssystem vorgeben.
+        Man bezeichnet die CPU deshalb oft als das Gehirn des Computers. Sie entscheidet, welche Aufgaben
+        wann ausgeführt werden, und sorgt dafür, dass Programme flüssig laufen und Daten schnell verarbeitet
+        werden können.
     </p>
 
-    <p>
-        Moderne Gehäuse bieten verschiedene Größen, Designs und Funktionen – von kompakten Mini-ITX-Gehäusen
-        bis hin zu großen Full-Towern für High-End-Systeme.
-    </p>
-
 </div>
 
-<!-- Bild -->
-<div class="col-md-6 p-0 text-end">
-    <img src="case.png" class="img-fluid" style="width: 70%; margin-top: 40px;" alt="PC Gehäuse Bild">
+<div class="col-md-6 p-0">
+    <img src="img2.png" class="img-fluid" style="margin-top: -20px; margin-left: 90px" width="85%;" alt="CPU Bild">
 </div>
 
 </div>
 
-<!-- Weitere Abschnitte -->
-
-<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Warum ist das Gehäuse wichtig?</h3>
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Die Rolle der CPU</h3>
 <p>
-    Ein gutes Gehäuse sorgt für optimalen Airflow, wodurch die Komponenten kühl bleiben und länger halten.
-    Außerdem bietet es Platz für Kabelmanagement, Lüfter, Radiatoren und Erweiterungskarten.
+    Die CPU ist für die Ausführung von Millionen von Befehlen pro Sekunde verantwortlich. Sie holt Daten
+    aus dem Speicher, dekodiert sie und führt sie anschließend aus. Moderne Prozessoren besitzen mehrere
+    Kerne, die gleichzeitig arbeiten können, wodurch mehrere Aufgaben parallel verarbeitet werden können.
 </p>
 
-<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Arten von PC-Gehäusen</h3>
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert die CPU?</h3>
 <p>
-    Es gibt verschiedene Gehäusegrößen:
-</p>
-<ul>
-    <li><strong>Mini-ITX:</strong> Sehr kompakt, ideal für kleine Systeme.</li>
-    <li><strong>Micro-ATX:</strong> Mittelgroß, gute Balance aus Platz und Größe.</li>
-    <li><strong>ATX Mid-Tower:</strong> Der Standard für Gaming-PCs.</li>
-    <li><strong>Full-Tower:</strong> Sehr groß, ideal für High-End-Builds und Wasserkühlung.</li>
-</ul>
-
-<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Airflow und Kühlung</h3>
-<p>
-    Ein gutes Gehäuse besitzt ausreichend Lüfterplätze und Mesh-Fronten, damit frische Luft ins Innere gelangt.
-    Ein schlechter Airflow kann zu hohen Temperaturen und Leistungsverlust führen.
+    Die CPU arbeitet nach einem festen Ablauf, dem sogenannten Fetch-Decode-Execute-Zyklus. Dabei holt sie
+    zuerst einen Befehl aus dem Speicher, entschlüsselt ihn und führt ihn anschließend aus. Dieser Vorgang
+    wiederholt sich ununterbrochen, solange der Computer eingeschaltet ist.
 </p>
 
-<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Design und Features</h3>
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">CPU-Geschwindigkeit</h3>
 <p>
-    Viele moderne Gehäuse bieten Glas-Seitenteile, RGB-Beleuchtung, modulare Innenräume und einfache
-    Montageoptionen. Auch Staubfilter und Kabelmanagement-Systeme gehören heute zum Standard.
+    Die Geschwindigkeit einer CPU wird in Gigahertz gemessen. Je höher die Taktfrequenz, desto mehr Befehle
+    kann die CPU pro Sekunde verarbeiten. Eine hohe Taktfrequenz sorgt dafür, dass Programme schneller
+    reagieren und Aufgaben zügiger erledigt werden.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">CPU-Kerne</h3>
+<p>
+    Moderne Prozessoren besitzen mehrere Kerne, die unabhängig voneinander arbeiten können. Dadurch lassen
+    sich mehrere Prozesse gleichzeitig ausführen, was die Gesamtleistung des Systems deutlich verbessert.
+    Je mehr Kerne eine CPU besitzt, desto besser eignet sie sich für Multitasking und anspruchsvolle
+    Anwendungen.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Was bestimmt die CPU-Leistung?</h3>
+<p>
+    Die Leistung einer CPU hängt von mehreren Faktoren ab. Dazu gehören die Taktfrequenz, die Anzahl der
+    Kerne, die Größe des Caches und die Architektur des Prozessors. Zusammengenommen bestimmen diese Werte,
+    wie schnell und effizient eine CPU arbeiten kann.
 </p>
 
 <br><br><br>
